--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pyasn1==0.4.8
 pycodestyle==2.7.0
 pycparser==2.20
 pydantic==1.8.2
+pytest==7.3.1
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-editor==1.0.4
